SPR-832 Change Fix background overflow at scrolling

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -23,7 +23,7 @@ body {
 
 .particles-bg {
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
